somewhat of an overview

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,77 @@
 % https://gitlab.cern.ch/atlas-physics-office/atlaslatex/blob/master/bib/ATLAS-useful.bib
 
+%% Used so far
+@article{PDG,
+  author        = {Zyla, P.A. and others},
+  title         = {{Review of Particle Physics}},
+  collaboration = {Particle Data Group},
+  doi           = {10.1093/ptep/ptaa104},
+  journal       = {PTEP},
+  volume        = {2020},
+  number        = {8},
+  pages         = {083C01},
+  year          = {2020}
+}
+
+@article{SMFigureWiki,
+	author = {Wikipedia contributors},
+	title = {Standard Model of Elementary Particles},
+	collaboration = {Wikipedia, the free encyclopedia},
+	year = {2019},
+	url  = {https://en.wikipedia.org/wiki/File:Standard_Model_of_Elementary_Particles.svg}
+}
+
+@book{Thomson:2013zua,
+    author = {Thomson, Mark},
+    title = {Modern particle physics},
+    isbn = "978-1-107-03426-6",
+    publisher = "Cambridge University Press",
+    address = {New York},
+    year = {2013}
+}
+
+@Inbook{Bernabeu2021,
+author="Bernabeu, Jose",
+editor="Sidharth, Burra G.
+and Murillo, Jes{\'u}s Carnicer
+and Michelini, Marisa
+and Perea, Carmen",
+title="Symmetries in the Standard Model",
+bookTitle="Fundamental Physics and Physics Education Research",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="3--16",
+abstract="Symmetries in the Physical Laws of Nature lead to observable effects. Beyond the regularities and conserved magnitudes, the last decades in Particle Physics have seen the identification of symmetries, and their well-defined breaking, as the guiding principle for the elementary constituents of matter and their interactions. Flavour SU(3) symmetry of hadrons led to the Quark Model and the antisymmetry requirement under exchange of identical fermions led to the colour degree of freedom. Colour became the generating charge for flavour-independent strong interactions of quarks and gluons in the exact Colour SU(3) local gauge symmetry. Parity violation in weak interactions led to consider the chiral fields of fermions as the objects with definite transformation properties under the weak isospin SU(2) gauge group of the unifying electroweak SU(2) {\texttimes} U(1) symmetry, which predicted novel weak neutral current interactions. CP violation led to three families of quarks opening the field of Flavour Physics. Time-reversal violation has recently been observed with entangled neutral mesons, compatible with CPT-invariance. The cancellation of gauge anomalies, that would invalidate the gauge symmetry of the quantum field theory, leads to quark-lepton symmetry. The experimental discovery of quarks and leptons and the mediators of their interactions, with physical observables in spectacular agreement with this standard theory, is the triumph of symmetries. The gauge symmetry is exact only when the particles are massless. One needs a subtle breaking of the symmetry, providing the origin of mass, without affecting the excellent description of the interactions. This is the Brout--Englert--Higgs mechanism which produces the Higgs boson as a remnant discovered at CERN in 2012. Open present problems are addressed with the search of New Physics Beyond-the-Standard-Model.",
+isbn="978-3-030-52923-9",
+doi="10.1007/978-3-030-52923-9_1",
+url="https://doi.org/10.1007/978-3-030-52923-9_1"
+}
+
+@article{Buchmüller:984122,
+      author        = "Buchmüller, W and Lüdeling, C",
+      title         = "{Field Theory and Standard Model}",
+      reportNumber  = "hep-ph/0609174, DESY-06-151, DESY-2006-151",
+      pages         = "70 p",
+      year          = "2006",
+      url           = "https://cds.cern.ch/record/984122",
+      doi           = "10.5170/CERN-2006-014.1",
+}
+
+@article{Hollik:1281946,
+      author        = "Hollik, W",
+      title         = "{Quantum field theory and the Standard Model}",
+      archivePrefix = "arXiv",
+      eprint        = "1012.3883",
+      year          = "2010",
+      url           = "http://cds.cern.ch/record/1281946",
+      note          = "Comments: 44 pages, Lectures given at the 2009 European
+                       School of High-Energy Physics, Bautzen, Germany, 14-27 Jun
+                       2009",
+      doi           = "10.5170/CERN-2010-002.1",
+}
+%% Haven't been used can delete later
+
 @techreport{A14,
   author       = {{ATLAS Collaboration}},
   title        = {{ATLAS Pythia 8 tunes to $7$~TeV data}},
@@ -10,6 +82,7 @@
   year         = {2014},
   url          = {https://cds.cern.ch/record/1966419}
 }
+
 @article{Aaboud:2159578,
   author        = {{ATLAS Collaboration}},
   title         = {{Measurement of the Inelastic Proton-Proton Cross Section
@@ -427,7 +500,7 @@
 }
 @article{FeynRules,
   author    = {Alloul, Adam and Christensen, Neil D. and Degrande, Céline and Duhr, Claude and Fuks, Benjamin},
-  title     = {{FeynRules  2.0 — A complete toolbox for tree-level phenomenology}},
+  title     = {{FeynRules  2.0 — A complete toolbox for tree-level phenomenology}},
   volume    = {185},
   issn      = {0010-4655},
   url       = {http://dx.doi.org/10.1016/j.cpc.2014.04.012},
@@ -845,7 +918,7 @@
 }
 @article{MuonG,
   author    = {Abi, B. et al.},
-  title     = {{Measurement of the Positive Muon Anomalous Magnetic Moment to $0.46$ ppm}},
+  title     = {{Measurement of the Positive Muon Anomalous Magnetic Moment to $0.46$ ppm}},
   volume    = {126},
   issn      = {1079-7114},
   url       = {http://dx.doi.org/10.1103/PhysRevLett.126.141801},
@@ -956,17 +1029,6 @@
   year      = {1997},
   month     = {Feb},
   pages     = {69–80}
-}
-@article{PDG,
-  author        = {Zyla, P.A. and others},
-  title         = {{Review of Particle Physics}},
-  collaboration = {Particle Data Group},
-  doi           = {10.1093/ptep/ptaa104},
-  journal       = {PTEP},
-  volume        = {2020},
-  number        = {8},
-  pages         = {083C01},
-  year          = {2020}
 }
 @article{PhysRevLett.13.321,
   author    = {Englert, F. and Brout, R.},
@@ -1166,14 +1228,6 @@
   year      = {2018},
   month     = {Aug}
 }
-@book{Thomson:1529540,
-  author    = {Thomson, Mark},
-  title     = {{Modern particle physics}},
-  publisher = {Cambridge University Press},
-  address   = {Cambridge},
-  year      = {2013},
-  url       = {http://cds.cern.ch/record/1529540}
-}
 @article{TransferMz1,
   author    = {CMS Collaboration},
   title     = {Measurements of the $ppZZ$ production cross section and the {$Z4\ell$} branching fraction, and constraints on anomalous triple gauge couplings at $\sqrt{s} = 13$ {TeV}},
@@ -1348,4 +1402,16 @@
   year      = {2009},
   month     = {Aug},
   pages     = {1199–1228}
+}
+@article{ElectroweakUnification,
+title = {Electromagnetic and weak interactions},
+journal = {Physics Letters},
+volume = {13},
+number = {2},
+pages = {168-171},
+year = {1964},
+issn = {0031-9163},
+doi = {https://doi.org/10.1016/0031-9163(64)90711-5},
+url = {https://www.sciencedirect.com/science/article/pii/0031916364907115},
+author = {A. Salam and J.C. Ward}
 }
