--- a/sections/theory.tex
+++ b/sections/theory.tex
@@ -1,12 +1,5 @@
+\part{\LARGE{Theory}}
 \label{sec:theory}
-\section{Standard Model}
-\label{sec:SM}
-\input{sections/theory_StandardModel.tex}
 
-\section{ Short Comings of the Standard Model}	
-\label{sec:SM_Incomplete}
-\input{sections/theory_StandardModelShortComings.tex}
-	
-\section{ Measurement Motivation}	
-\label{sec:Motivation}
-\input{sections/theory_MeasurementMotivation.tex}
+This chapter describes the theoretical framework of the experimental measurements discussed in this thesis. The Standard Model (SM) of particle physics is introduced and concepts relevant to the thesis are discussed in Section \ref{sec:SM}. Section \ref{sec:SM_Incomplete} discusses the outstanding problems with the Standard Model thus, motivating the experimental measurement. Finally, Section \ref{sec:Motivation} discusses the phenomenology of the proton-proton collisions relevant in context of the electroweak di-Zboson measurement.
+
