really bad QED Tobe re-read, fixed, re-read

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,4 @@
 % https://gitlab.cern.ch/atlas-physics-office/atlaslatex/blob/master/bib/ATLAS-useful.bib
-
 %% Used so far
 @article{PDG,
   author        = {Zyla, P.A. and others},
@@ -46,6 +45,15 @@ abstract="Symmetries in the Physical Laws of Nature lead to observable effects. 
 isbn="978-3-030-52923-9",
 doi="10.1007/978-3-030-52923-9_1",
 url="https://doi.org/10.1007/978-3-030-52923-9_1"
+}
+
+@book{Halzen:1984mc,
+	title = {Quarks \& Leptons: An introductory course in modern particle physics},
+	author = {Halzen, Francis and Martin, Alan},
+	isbn = "0-471-88741-2"
+  	address = {New York, USA},
+  	publisher = {John Wiley \& Sons},
+  	year = {1984}
 }
 
 @article{Buchmüller:984122,
