--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,9 +1,12 @@
 \begin{itemize}
+\item{EWk: Electroweak}
 \item{H: Weak Hypercharge}
 \item{ I: Weak Isospin}
+\item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LH:  Left Handed}
 \item{Q: Electric Charge}
+\item{QED: Quantum Electrodynamics}
+\item{QCD: Quantum Chromodynamics}
 \item{RH: RightHanded}
 \item{SM: Standard Model}
-\item{}
 \end{itemize}
