Proof read theory until pheno of p-p collisions, fixed citations

--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,12 +1,18 @@
 \begin{itemize}
+\item {C: Charge conjugation}
+\item{P: Parity}
+\item{T: Time-reversal}
 \item{EWk: Electroweak}
 \item{H: Weak Hypercharge}
 \item{ I: Weak Isospin}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LH:  Left Handed}
+\item{MC: Monte Carlo}
 \item{Q: Electric Charge}
 \item{QED: Quantum Electrodynamics}
 \item{QCD: Quantum Chromodynamics}
+\item{$(\mathcal{P})$: Poincare group}
 \item{RH: RightHanded}
 \item{SM: Standard Model}
+\item{VEV: Vacuum Expectation Value}
 \end{itemize}
