--- a/sections/theory.tex
+++ b/sections/theory.tex
@@ -1,5 +1,6 @@
 \part{\LARGE{Theory}}
 \label{sec:theory}
 
-This chapter describes the theoretical framework of the experimental measurements discussed in this thesis. The Standard Model (SM) of particle physics is introduced and concepts relevant to the thesis are discussed in Section \ref{sec:SM}. Section \ref{sec:SM_Incomplete} discusses the outstanding problems with the Standard Model thus, motivating the experimental measurement. Finally, Section \ref{sec:Motivation} discusses the phenomenology of the proton-proton collisions relevant in context of the electroweak di-Zboson measurement.
+This chapter describes the theoretical framework of the experimental measurements discussed in this thesis. The Standard Model (SM) of particle physics is introduced, and concepts relevant to the thesis are discussed in Section \ref{sec:SM}. Section \ref{sec:SM_Incomplete} discusses the outstanding problems with the Standard Model, thus, motivating the experimental measurement. Section \ref{sec:Pheno} discusses the phenomenology of the proton-proton collisions relevant to this thesis whereas, Section \ref{sec:EWKPheno} discusses the physics of two $Z$ bosons production in association of two jets. 
+
 
