--- a/sections/theory_StandardModel.tex
+++ b/sections/theory_StandardModel.tex
@@ -1,23 +1,34 @@
 \section{The Standard Model}
 
 \label{sec:SM}
-\subsection{Overview}
-\label{subsec:Overview}
-The Standard Model (SM) of particle physics is a mathematical framework based on quantum field theory which incorporates quantum mechanics and special relativity and describes the known fundamental particles in nature and all their interactions. It consists of two sets of particles with intrinsic angular momentum, half-integer-spin fermions which are fundamental constituents of matter particles, and force-carrying integer-spin bosons. The seventeen fundamental particles of the SM and their properties such as mass, charge, and intrinsic spin are shown schematically by figure \ref{fig:SM}. Discussion in this section is written with the guidance from three textbooks of particles, Mark Thomson's Modern Particle Physics \cite{Thomson:2013zua}, and Halzen $\&$ Martin's Quarks $\&$ Leptons \cite{Halzen:1984mc}.
+The SM of particle physics is a mathematical framework based on quantum field theory which incorporates quantum mechanics and special relativity. The SM describes all known fundamental particles in nature and their interactions. It consists of two sets of particles with intrinsic angular momentum, half-integer-spin fermions that are fundamental constituents of matter particles, and force-carrying integer-spin bosons. The seventeen fundamental particles of the SM and their properties such as mass, charge, and intrinsic spin are shown schematically by figure \ref{fig:SM}. Discussion in this section is written with the guidance from two textbooks on particle physics, Mark Thomson's Modern Particle Physics \cite{Thomson:2013zua}, and Halzen $\&$ Martin's Quarks $\&$ Leptons \cite{Halzen:1984mc}.
+
+
+\subsection{Symmetries}
+\label{subsec:Symmetries}
+The fundamental particles of the SM and their interactions can be described by constructing a general renormalizable Lagrangian $(\mathcal{L}_{SM})$ that respects certain sets of given symmetries. The Lagrangian of the SM is independent of the reference frame, naturally respecting the complete external symmetries of special relativity, the Poincare group $(\mathcal{P})$. Thus, the SM is invariant under spacetime translations, boosts, and rotations. Additionally, by the construction of the Lagrangian, the SM respects an internal local gauge symmetry $SU(3)_{C}~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$. The $SU(3)_{C}$ symmetry is associated with the Quantum Chromodynamics (QCD) discussed in detail in Section \ref{subsubsec:QCD}. The $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge symmetry discussed in \ref{subsubsec:EWkUni} is associated with the unified electroweak theory that combines Quantum Electrodynamics (QED) and the weak interactions. 
+
+According to Noether's theorem, a quantity is conserved for each continuous transformation that leaves the Lagrangian invariant \cite{NoetherTheorem}. Several interesting physical quantum numbers are conserved as a consequence of the symmetries respected by the SM. The $SU(3)_{C}$ in QCD conserves color charge. Weak isospin (I) and weak hypercharge (Y) are the quantum numbers associated with the $SU(2)_{L}$ and $U(1)_{Y}$ gauge groups respectively. At low energies the $SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry is spontaneously broken and will be discussed in Section \ref{subsubsec:EWkUni}. The $SU(2)_{L}$ group follows a chiral structure where the gauge fields couple explicitly to the left-handed (LH) chiral fermions states and the right-handed (RH) chiral anti-fermions states.
+
+The SM also respects CPT symmetry, a combination of three additional discrete symmetries, charge conjugation (C), parity (P), and time-reversal (T). The charge-conjugation transformation transforms particles to anti-particles by reversing the quantum numbers, whereas, the parity transformation transforms left-handed particles to right-handed particles.
+
+
+\subsection{Particles and Fields}
+\label{subsec:Constituents}
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=0.7\textwidth] {figures/SMparticles.png}\hspace{1cm}
-    \caption{ The seventeen fundamental particles of the Standard Model include three generations of twelve fermions, four gauge bosons, and the scalar Higgs bosons. \cite{SMFigureWiki}}
+    \includegraphics[width=0.7\textwidth] {figures/SMparticles.pdf}\hspace{1cm}
+    \caption{ The seventeen fundamental particles of the SM include three generations of twelve fermions, four gauge bosons, and the scalar Higgs bosons. \cite{SMFigureWiki}}
     \label{fig:SM}
 \end{figure}
 
-The twelve half-integer-spin fermions can be further distinguished into two categories, leptons, and quarks, each having three generations of particles with similar properties as shown schematically by figure \ref{fig:SM}. For each fermion, there exists an anti-fermion with the same additive quantum numbers but with opposite signs. The four spin $1$ bosons shown in Table \ref{tab:VectorBosons} are collectively called the gauge bosons. The quanta of these gauge fields mediate the electromagnetic, weak, and strong interactions. Gauge fields are invariant under various local group transformations that preserve some quantum numbers associated with the interactions and are discussed in detail in Section \ref{subsec:TheoryFormulation} \cite{Bernabeu2021}. Different fermions take part in different interactions as outlined by Table \ref{tab:FermionInteraction}, and the strength of the interaction is governed by a gauge coupling parameter.
+The twelve half-integer-spin fermions can be distinguished further into two categories, leptons, and quarks, each having three generations of particles with similar properties as shown schematically by figure \ref{fig:SM}. For each fermion, there exists an anti-fermion with the same additive quantum numbers but with opposite signs. Four spin $1$ bosons shown in Table \ref{tab:VectorBosons} are collectively called the gauge bosons. Quanta of these gauge fields mediate the electromagnetic, weak, and strong interactions and are invariant under various local gauge transformations \cite{Bernabeu2021}. As summarized by Table \ref{tab:FermionInteraction}, fermions take part in different interactions. The strength of interaction is governed by a gauge coupling parameter.
 
-Massless photon ($\gamma$) mediates the electromagnetic interaction. The massive $W$ and $Z$ bosons mediate weak interaction. The Standard Model unifies electromagnetic and weak forces to a unified electroweak theory which follows from $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge symmetry discussed in detail in Section \ref{subsubsec:EWkUni}. Weak isospin (I) and weak hypercharge (Y) are the quantum numbers associated with the $SU(2)_{L}$ and $U(1)_{Y}$ gauge groups respectively. The electric charge (Q) which is conserved in all interactions is related to the isospin and hypercharge by $Q=I_3 + \frac{Y}{2}$, where $I_3$ is the third component of the weak isospin. The $SU(2)_{L}$ group follows a chiral structure where the gauge fields couple explicitly to the left-handed (LH) chiral fermions states and the right-handed (RH) chiral anti-fermions states. Thus, each generation of fermion contains a left-handed doublet with $I=\frac{1}{2}$ and a right-handed singlet carrying $I=0$ which are shown in Table \ref{tab:Fermions}. 
+Massless photon ($\gamma$) mediates the electromagnetic interaction. The massive $W$ and $Z$ bosons mediate weak interaction. The electric charge (Q) which is conserved in all interactions is related to the isospin and hypercharge by $Q=I_3 + \frac{Y}{2}$, where $I_3$ is the third component of the weak isospin. As a consequence of the chiral structure of $SU(2)_{L}$, each generation of fermion contains a left-handed doublet with $I_{3}=\pm\frac{1}{2}$ and a right-handed singlet carrying $I_{3}=0$ which are shown in Table \ref{tab:Fermions}. 
 
 \begin{table}
-\caption{Properties of Standard Model gauge bosons.\cite{PDG}}
+\caption{Properties of SM gauge bosons.\cite{PDG}}
 \begin{center}
 \begin{tabular}{| c | c | c | c | c | c |}
 \hline
@@ -35,11 +46,11 @@ Massless photon ($\gamma$) mediates the electromagnetic interaction. The massive
 \end{table}
 
 \begin{table}
-\caption{ Summary of different interactions of fermions under different gauge theory. The check mark suggest that the fermions interact via associated force.}
+\caption{ Summary of different interactions of fermions under different gauge theory. The check mark suggests that the fermions interact via associated force.}
 \begin{center}
 \begin{tabular}{| c | c | c |  c | c |}
 \hline
-\multicolumn{2}{|c|} {Particles} & Strong $SU(S)$ & Electromagnetic $U(1)$ & Weak $SU(2)$ \\
+\multicolumn{2}{|c|} {Particles} & Strong $SU(3)$ & Electromagnetic $U(1)$ & Weak $SU(2)$ \\
 \hline
 \hline
 \multirow{2}{*} {Quarks} & $u, c, t$ &  \multirow{2}{*} \checkmark & \multirow{2}{*} \checkmark & \multirow{2}{*} \checkmark \\
@@ -53,12 +64,12 @@ Massless photon ($\gamma$) mediates the electromagnetic interaction. The massive
 \end{center}
 \end{table}
 
-Each generation of lepton, electron $(e)$, muon $(\mu)$ and tau $(\tau)$ is accompanied by a neutral particle called neutrino $(\nu)$ with same lepton flavor $(\nu_e, \nu_{\mu} \& \nu_{\tau})$. The lepton flavor is conserved by the Standard Model. Standard Model neutrinos are their own anti-particles and only left-handed neutrinos are predicted by the theory.
+Each generation of lepton, electron $(e)$, muon $(\mu)$ and tau $(\tau)$ is accompanied by a neutral particle called neutrino $(\nu)$ with same lepton flavor $(\nu_e, \nu_{\mu} \& \nu_{\tau})$. The SM neutrinos are their own anti-particles and only left-handed neutrinos are predicted by the theory. The lepton flavor is conserved by the SM in all interactions.
 
-The quarks can be further categorized into two categories, the up-type quarks with $+\frac{2}{3}$ charge and the down-type quarks with $-\frac{1}{3}$ charge. Up $(u)$, charm  $(c)~,~\&$ top $(t)$ are the first, second, and third generation of the up-type quarks, while the down $(d)$, strange $(s)$ $\&$ bottom $(b)$ are the three generations of the down-type quarks. The down-type left-handed quarks in $SU(2)_{L}$ quark doublets $d^{'},~s^{'}~ \&~b^{'}$ summarized in table \ref{tab:Fermions} are linear combinations of $d,~s,~b$ quarks. The quarks interact strongly with one another by strong interaction mediated by the massless neutral gluons which follow from $SU(3)$ gauge symmetry by exchange of color charges. Each quark can have either one of the three color charges (red, blue $\&$, green), whereas an anti-quark can have either anti-red, anti-blue, or anti-green color charge. There are eight gluons in the Standard Model with color charges formed by a combination of either of the two color charges. Since gluons have a color charge, they interact with other gluons strongly. 
+The quarks can be further categorized into two categories, the up-type quarks with $+\frac{2}{3}$ charge and the down-type quarks with $-\frac{1}{3}$ charge. Up $(u)$, charm  $(c)~,~\&$ top $(t)$ are the first, second, and third generation of the up-type quarks, while the down $(d)$, strange $(s)$ $\&$ bottom $(b)$ are the three generations of the down-type quarks. The down-type left-handed quarks in $SU(2)_{L}$ quark doublets $d^{'},~s^{'}~ \&~b^{'}$ summarized in table \ref{tab:Fermions} are linear combinations of $d,~s,~b$ quarks. The quarks interact strongly with one another by strong interaction mediated by the massless neutral gluons which follow from $SU(3)$ gauge symmetry by exchange of color charges. Each quark can have either one of the three color charges (red, blue $\&$, green), whereas an anti-quark can have either an anti-red, anti-blue or anti-green color charge. There are eight gluons in the SM with color charges formed by a combination of either of the two color charges. Since gluons have a color charge, they interact with other gluons strongly. Only color neutral hadronic states formed by a combination of quarks and gluons are observed experimentally.
 
 \begin{table}
-\caption{Electroweak quantum numbers of Standard Model half-integer spin fermions (quarks and leptons) arranged in a left-handed $SU(2)$ doublet and right-handed $SU(2)$ singlet.\cite{Halzen:1984mc}}
+\caption{Electroweak quantum numbers of the SM half-integer spin fermions (quarks and leptons) arranged in a left-handed $SU(2)$ doublet and right-handed $SU(2)$ singlet.\cite{Halzen:1984mc}}
 \begin{center}
 \begin{tabular}{| c | c | c | c | c | c | c |}
 \hline
@@ -96,25 +107,18 @@ The quarks can be further categorized into two categories, the up-type quarks wi
 \end{center}
 \end{table}
 
-Higgs boson is the only spin-0 scalar particle in the theory with no charge and gives masses to all other particles through Spontaneous Symmetry Breaking which will be discussed in section \ref{subsubsec:EWkUni}.
+Higgs boson is the only spin-0 scalar particle in the theory with no charge and gives masses to all other particles through Spontaneous Symmetry Breaking which will be discussed in Section \ref{subsubsec:EWkUni}.
 
 \subsection{Theoretical Formulation of the Standard Model}
 \label{subsec:TheoryFormulation}
-I guess the best way to organize this sub section would be to discuss the following bullet points in detail.
-\begin{itemize}
-\item{motivate QFT}
-\item{introduce fields and Dirac spinors??}
-\item{fermion,gauge,scalar fields introduction? }
-\end{itemize}
 
 \subsubsection{Relativistic Quantum Field Theory}
 \label{subsubsec:RelQFT}
-Relativistic quantum field theory is the theoretical framework that describes the elementary particles and their interactions of the Standard Model. This section introduces the framework. 
+Relativistic quantum field theory is the theoretical framework of the SM that describes elementary particles and their interactions. This section introduces the framework. 
 
 \subsubsection{Lagrangian of the Standard Model}
 \label{subsubsec:SMLag}
 The dynamics of the SM can be described by the Lagrangian density given in equation \ref{eqn:SMLagrangian} which is invariant under the local gauge transformation of the $SU(3)~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry group. 
-
 \begin{equation}
 \mathcal{L_{SM}} = -\frac{1}{4}F_{\mu\nu}F^{\mu\nu} ~+~ i\bar{\psi}\gamma^{\mu}D_{\mu}\psi ~+~ |D_{\mu}\phi|^{2} ~+~ -V(\phi) + \bar{\psi_{i}}y_{ij}\psi_{j}\phi ~+~ h.c.
 \label{eqn:SMLagrangian}
@@ -122,18 +126,16 @@ The dynamics of the SM can be described by the Lagrangian density given in equat
 
 The first term $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ describes the dynamics of the gauge boson interactions, the second term $i\bar{\psi}\gamma^{\mu}D_{\mu}\psi$ describes the interaction of the fermion fields. The third term $|D_{\mu}\phi|^{2}$ describes the couplings between the Higgs boson and gauge bosons, whereas the term $V(\phi)$ describes the Higgs potential and its self-interactions. The second last term $\bar{\psi_{i}}y_{ij}\psi_{j}\phi$ generates masses for fermions based on their Yukawa couplings $y_{ij}$ to the Higgs field. Similarly, the last term $h.c.$ generates masses for antifermions. 
 
-SM respects the Poincar\'e symmetry making the Lagrangian in equation \ref{eqn:SMLagrangian} invariant under spacetime translations, rotations and boosts. The Lagrangian is also invariant under $SU(3)~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$ gauge transformations. According to Noether's theorem, a quantity is conserved for each continuous transformation that leaves the Lagrangian invariant. All three parts of the Standard Model, quantum electrodynamics (QED), quantum chromodynamics (QCD) and electroweak (EWK) are gauge theories whose Lagrangians are derived independently in sections below.
-
 \subsubsection{Quantum Electrodynamics}
 \label{subsubsec:QED}
-Quantum electrodynamics describes the electromagnetic interaction. The Lagrangian density ($\mathcal{L}_{Dirac}$) describes the free propagation of a fermion in vacuum as:  
+Quantum electrodynamics describes electromagnetic interaction. The Lagrangian density ($\mathcal{L}_{Dirac}$) describes the free propagation of a fermion in a vacuum as:  
 
 \begin{equation}
 \mathcal{L}_{Dirac} = \bar{\psi} i \gamma^{\mu} \partial_{\mu} \psi ~-~ m\bar{\psi}\psi
 \label{eqn:DiracLag}
 \end{equation},
 
-where $\psi$ is the fermionic spinor, $\gamma^{\mu}$ represents the Dirac matrices with $\mu$ being the Lorentz index running from $0$ to $3$, $\partial^{\mu}$ is the covariant derivative and m is the mass of the fermion \cite{}. 
+where $\psi$ is the fermionic spinor, $\gamma^{\mu}$ represents the Dirac matrices with $\mu$ being the Lorentz index running from $0$ to $3$, $\partial^{\mu}$ is the covariant derivative and m is the mass of the fermion. 
 
 The Lagrangian in equation \ref{eqn:DiracLag} is invariant under a $U(1)$ global gauge transformation, 
 \begin{equation}
@@ -148,7 +150,7 @@ where q is a parameter of the transformation itself and $\alpha$ is a real phase
 \label{eqn:QEDLocalTrans}
 \end{equation}
 
-which depends on $x~=~(x_{0},x_{1},x_{2},t)$ the Dirac Lagrangian in equation \ref{eqn:DiracLag} is not invariant. 
+which $\alpha$ depends on $x~=~(x_{0},x_{1},x_{2},t)$ the Dirac Lagrangian in equation \ref{eqn:DiracLag} is not invariant. 
 
 To make the Lagrangian of equation \ref{eqn:DiracLag} invariant, a gauge field $A_{\mu}$ is introduces with the following transformation properties, 
 
@@ -164,10 +166,10 @@ D_{\mu} = \partial_{\mu} - iqA_{\mu}
 \label{eqn:QEDCovDerv}
 \end{equation}  
 
-The quantity $q$ can be interpreted as the electric charge $-e$ of fermion which gives the coupling strength of QED. With these substitutions the Dirac Lagrangian in equation \ref{eqn:DiracLag} changes to following
+The quantity $q$ can be interpreted as the electric charge $-e$ of fermion which gives the coupling strength of QED. With these substitutions, the Dirac Lagrangian in equation \ref{eqn:DiracLag} changes to following
 
 \begin{equation}
-\mathcal{L} = \bar{\psi} ( i \gamma^{\mu} D_{\mu} ~-~ m) \psi = \bar{\psi} ( i \gamma^{\mu} \partial_{\mu} ~-~ m) \psi + e\bar{\psi} \gamma^{\mu} \psi A_{\mu}
+\mathcal{L} = \bar{\psi} ( i \gamma^{\mu} D_{\mu} ~-~ m) \psi
 \label{eqn:QEDInvLag}
 \end{equation},
 
@@ -188,14 +190,11 @@ The gauge invariant kinetic term of photon $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ ca
 \end{equation}
 
 $\mathcal{L}_{QED}$ in equation \ref{eqn:QEDFullLag} is the full Lagrangian for QED and the electromagnetic phenomena can be derived by solving for the equations of motion applying the Lorentz gauge condition $\partial_{\mu}A^{\mu}=0$. 
-\textcolor{red}{maybe i add more description here on QED coupling constant?}
-
-% dimensionless coupling constant ($\alpha_{QED}$) of QED as $\alpha_{QED} = \frac{e^2}{4\pi}$. \textcolor{red}{ 
 
 \subsubsection{Quantum Chromodynamics }
 \label{subsubsec:QCD}
 
-Interaction between the quarks is defined by Quantum Chromodynamics requiring $SU(3)$ gauge transformation on quark field with color charge $j$ (red, blue or green).
+Interaction between the quarks is defined by Quantum Chromodynamics requiring $SU(3)$ gauge transformation on the quark field with color charge $j$ (red, blue, or green).
  
 The Dirac Lagrangian for a quark can be modified to include all possible colors of quark field $q_{j}$ as
 
@@ -204,7 +203,7 @@ The Dirac Lagrangian for a quark can be modified to include all possible colors 
 \label{eqn:QCDStartL}
 \end{equation}
 
-The generators of $SU(3)$ group are eight linearly independent traceless Gell-Mann matrices which do not commute with each other such that 
+The generators of the $SU(3)$ group are eight linearly independent traceless Gell-Mann matrices that do not commute with each other such that 
 
 \begin{equation}
 [ T_{a},T_{b} ] = if_{abc}T_{c}
@@ -220,17 +219,17 @@ q(x) \rightarrow e^{i \alpha_a(x) T_{a}} q(x)
 \label{eqn:QCDSU3LT}
 \end{equation}
 
-where $T_{a} = \frac{\lambda_{a}}{2}$, and $a = {1,2...8}$. To understand the source of gauge invariance in the Lagrangian in equation \label{eqn:QCDStartL}, we can consider an infinitesimal transformation of the color field as 
+where $T_{a} = \frac{\lambda_{a}}{2}$, and $a = {1,2...8}$. To understand the source of gauge invariance in the Lagrangian in equation \label{eqn:SU3LocalGaugeTransform}, we can consider an infinitesimal transformation of the color field as 
 
 \begin{equation}
 q(x) \rightarrow [ 1 + i\alpha_{a}(x)T_{a}]q(x) \\
-\ni ~ \partial_{\mu}q \rightarrow ( 1 + i\alpha_{a}T_{a})\partial_{\mu}q + iT_{a}q\partial_{\mu} alpha_{a}
+\ni ~ \partial_{\mu}q \rightarrow ( 1 + i\alpha_{a}T_{a})\partial_{\mu}q + iT_{a}q\partial_{\mu} \alpha_{a}
 \end{equation}
 
 The last term $iT_{a}q\partial_{\mu} \alpha_{a}$ breaks the gauge invariance. Similar to QED, eight gauge fields corresponding to each $a = {1,2...8}$ $G_{\mu}^{a}$ with following transformation properties are introduced 
 
 \begin{equation}
-G_{\mu}^{a} \rightarrow G_{\mu}^{a} - \frac{1}{g} \partial_{\mu} \alpha_{a} - f_{abc}\alpha_{b}G^{c}_{\mu}
+G_{\mu}^{a} \rightarrow G_{\mu}^{a} - \frac{1}{g_{s}} \partial_{\mu} \alpha_{a} - f_{abc}\alpha_{b}G^{c}_{\mu}
 \label{eqn:SU3GaugeField}
 \end{equation}
 
@@ -249,7 +248,10 @@ The Lagrangian density in equation \ref{eqn:QCDStartL} is then
 \label{eqn:QCDInvLag}
 \end{equation}
 
-Similar to QED, a gauge invariant kinetic term $-1\frac{1}{4}G^{a}_{\mu\nu}G^{\mu\nu}_{a}$, dependent on the field strength tensor $G^{a}_{\mu\nu}$ is added to equation \ref{eqn:QCDInvLag} to give the full QCD Lagrangian. The kinetic terms allows self-interaction within the gluon fields which is an important feature of QCD. $G^{a}_{\mu\nu}$ is the field strength tensor defined as
+Similar to QED, a gauge-invariant kinetic term 
+$-\frac{1}{4}G^{a}_{\mu\nu}G^{\mu\nu}_{a}$, 
+
+dependent on the field strength tensor $G^{a}_{\mu\nu}$ is added to equation \ref{eqn:QCDInvLag} to give the full QCD Lagrangian. The kinetic terms allow self-interaction within the gluon fields which is an important feature of QCD. $G^{a}_{\mu\nu}$ is the field strength tensor defined as
 
 \begin{equation}
 G^{a}_{\mu\nu} = \partial_{\mu}G^{a}_{\nu} - \partial_{\nu}G^{a}_{\mu} - g_{s}f_{abc}G^{b}_{\mu}G^{c}_{\nu}
@@ -258,16 +260,175 @@ G^{a}_{\mu\nu} = \partial_{\mu}G^{a}_{\nu} - \partial_{\nu}G^{a}_{\mu} - g_{s}f_
 
 Therefore, the complete $SU(3)$ gauge invariant Lagrangian describing the quarks and gluons interaction is
 \begin{equation}
-\mathcal{L}_{QCD} = \bar{q_{j}}(i\gamma^{\mu}D_{\mu} - m )q_{j} - -1\frac{1}{4}G^{a}_{\mu\nu}G^{\mu\nu}_{a} 
-\label{eqn:QCDInvLag}
+\mathcal{L}_{QCD} = \bar{q_{j}}(i\gamma^{\mu}D_{\mu} - m )q_{j} -\frac{1}{4}G^{a}_{\mu\nu}G^{\mu\nu}_{a} 
+\label{eqn:QCDCompleteLag}
 \end{equation}
 
-\textcolor{red}{
-\begin{itemize}
-\item{Add Color Confinement}
-\item{Add Discussion on Coupling Strength}
-\end{itemize}}
-
-\subsubsection{Electroweak Unification and the Higgs Mechanism}
+\subsubsection{Electroweak Theory}
 \label{subsubsec:EWkUni}
+Weak interactions describe the interactions mediated by massive gauge bosons. The first formulation of the weak interaction was made by Fermi in $1934$, to explain the beta decay using four fermion interaction vertex. The formulation successfully describes the beta decay at low energies when the interaction energy is much smaller than the $W$ boson mass. A unified electroweak theory was formulated by Glashow in $1961$ \cite{GLASHOW1961579}, by extending the $SU(2)$ symmetric non-Abelian gauge theory formulated by Yang and Mills in $1954$ \cite{PhysRev.96.191} to $SU(2)~\otimes~U(1)$ gauge theory. Above the unification threshold, the differences in the electromagnetic and weak interactions are not apparent.
 
+Experimental observations suggest that weak interactions violate parity by only affecting the left-handed fermion fields and the right-handed anti-fermion fields. Thus the unified electroweak theory are described by $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge interactions. Similar to the electric charge $Q$ conserved in QED by $U(1)$ symmetry, the weak hypercharge ($Y=2(Q-I_{3})$) related to the electric charge and the weak isospin $I_{3})$ is conserved by the $U(1)_{Y}$ symmetry. The fermion fields are represented by the left-handed doublets $\chi_{L}$ and the right-handed singlets $\psi_{R}$, introduced in table \ref{tab:Fermions}. The doublet and singlet field for the first generation of leptons and quarks are, 
+
+\begin{center}
+$ \chi_{L} = \begin{pmatrix} \nu_{e} \\ e\end{pmatrix}_{L}$ \hspace{5pt} $\&$ \hspace{5pt} $ \chi_{L} = \begin{pmatrix}  u \\ d \end{pmatrix}_{L}$ \\
+\vspace{10pt}
+$ \psi_{R} = e_{R}$ \hspace{10pt} $\&$ \hspace{5pt} $\psi_{R} = u_{R} ~\&~ d_{R}$
+\end{center}
+The Lagrangian for these fermion fields should be invariant under local gauge transformation corresponding to both $SU(2)_{L}$ and $U(1)_{Y}$ symmetry as, 
+
+\begin{equation}
+\chi_{L} \rightarrow e^{i\beta(x)Y+i\alpha_{a}(x)\tau_{a}} \chi_{L}
+\label{eqn:SU2LHTransform}
+\end{equation}
+
+\begin{equation}
+\psi_{R} \rightarrow e^{i\beta(x)Y} \psi_{R}
+\label{eqn:SU2RHTransform}
+\end{equation}
+
+where, $\beta(x)$ and $\alpha(x)$ are the local phase transformation for $U(1)_{Y}$ and $SU(2)_{L}$ symmetry groups respectively. Weak hypercharge operator $Y$ and Pauli matrices $\tau_{a=1,2,3}$ are generators of $U(1)_{Y}$ and $SU(2)_{L}$ symmetry groups respectively. Similar to the formulation in QED and QCD discussed in Section \ref{subsubsec:QED} and \ref{subsubsec:QCD}, four new field strength tensors $B_{\mu\nu}$ and $W^{a}_{\mu\nu}$ corresponding to respectively the $U(1)_{Y}$ and $SU(2)_{L}$ transformations are introduced. The  $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge-invariant Lagrangian for a massless fermion and massless gauge fields is:
+
+\begin{equation}
+\mathcal{L}_{0} = \bar{\chi_{L}}\gamma^{\mu} [i\partial_{\mu} - g \frac{\tau_{a}}{2} W^a_{\mu} + \frac{g^{'}}{2} B_{\mu} ] \chi_{L} + \bar{\psi_{R}} \gamma^{\mu} [ i \partial_{\mu} + g^{'} B_{\mu} ] \psi_{R} - \frac{1}{4} W_{\mu\nu}^{a} W^{\mu\nu}_{a} - \frac{1}{4} B_{\mu\nu} B^{\mu\nu}
+\label{eqn:EWKLagrangian1}
+\end{equation}
+
+where similar to QED and QCD, the field strength tensors are defined in terms of the covariant derivative to preserve the gauge-invariance in the kinetic terms as,
+
+\begin{equation}
+B_{\mu\nu} = \partial_{\mu}B_{\nu} - \partial_{\nu}B_{\mu}
+\label{eqn:U1YFST}
+\end{equation}
+
+\begin{equation}
+W_{\mu\nu}^{a} = \partial_{\mu}W_{\nu}^{a} - \partial_{\nu}W_{\mu}^{a} + g\epsilon^{abc}W_{\mu}^{b}W_{\nu}^{c}
+\label{eqn:SU2FST}
+\end{equation}
+
+The non-Abelian part of the $SU(2)_{L}$ transformation is represented by the last term of equation \ref{eqn:SU2FST} which gives the quartic and triple self-interactions between the gauge bosons with coupling strength $g$. 
+
+The electroweak Lagrangian in equation \ref{eqn:EWKLagrangian1} contains two terms, one of which gives rise to the charged-current interaction with the two $SU(2)$ boson field 
+
+\begin{equation}
+W^{\pm}_{\mu} ~=~ \frac{ W^{1}_{\mu} \mp iW^{2}_{\mu} } {\sqrt(2)}
+\label{eqn:RealWBosons}
+\end{equation}
+via exchange of the $W^{\pm}$ bosons and the neutral current interactions from the two neutral gauge boson fields $W^{3}_{\mu}$ and $B_{\mu}$. 
+
+The Lagrangian for the charged-current interaction for the first generation of quarks and leptons is, 
+
+\begin{equation}
+\mathcal{L}_{CC} = \frac{g}{2\sqrt{2}} \{ W^{\dagger}_{\mu} [\bar{u}\gamma^{\mu}(1-\gamma_{5})d + \bar{\nu_{e}}\gamma^{\mu}(1-\gamma_{5})e ]~+~h.c \}
+\label{eqn:SU2CCLag}
+\end{equation}
+
+The $SU(2)_{L}$ charged-current interaction Lagrangian for the next two generations follows the same, establishing the universality of the quark and lepton interactions as a direct consequence of the gauge symmetry.
+
+The neutral-current Lagrangian is given by, 
+\begin{equation}
+\mathcal{L}_{NC} = \sum_{j}{ \bar{\psi_{j}} \gamma^{\mu} \{ A_{\mu} [ g \frac{\tau_{3}}{2} sin\theta_{W} + g^{'} Y cos\theta_{W} ] + Z_{\mu} [ \frac{\tau_{3}}{2} cos\theta_{W} - g^{'} Y sin\theta_{W}] \} \psi_{j} }
+\label{eqn:SU2NCLag}
+\end{equation}
+
+where the two neutral gauge fields $Z_{\mu}$ and $A_{\mu}$ associated with $Z$ boson and photon governing the weak neutral and electromagnetic interactions are obtained from an arbitrary linear combination of the $W^{3}_{\mu}$ and $B_{\mu}$ fields as 
+
+\begin{equation}
+\begin{pmatrix} A_{\mu} \\ Z_{\mu} \end{pmatrix} =  \begin{pmatrix} cos{\theta_{W}} & sin{\theta_{W}} \\ -sin{\theta_{W}} & cos{\theta_{W}} \end{pmatrix} \begin{pmatrix} B_{\mu} \\ W^{3}_{\mu} \end{pmatrix}
+\label{eqn:NeutralGaugeBosons}
+\end{equation}
+
+
+The following condition needs to be imposed to get QED from $A_{\mu}$:
+
+\begin{equation}
+g sin\theta_{W} = g^{'} cos\theta_{W} = e ~\& ~  Y= Q - T_{3}
+\label{eqn:QEDFromEWk}
+\end{equation}
+, where $T_{3}=\frac{\tau_{3}}{2}$ is the weak isospin and $\theta_{W}$ is the Weinberg mixing angle, which can be measured experimentally and expressed in terms of the two $SU(2)_{L}$ coupling $g^{'}$ and $U(1)_{Y}$ coupling $g$ as:
+
+\begin{equation}
+sin\theta_{W} = \frac{g^{'}}{\sqrt{g^{2} +  g^{'2} }} ~\&~ cos\theta_{W} = \frac{g}{\sqrt{g^{2} +  g^{'2} }}
+\label{eqn:WeinbergAngle}
+\end{equation}
+
+The Lagrangian in equation \ref{eqn:EWKLagrangian1} describes the electroweak interactions only for massless fermions and massless gauge bosons, which contradicts the experimental observations. The mass origin of the fermions and gauge bosons is discussed in Section \ref{subsubsec:HiggsMech} below. 
+
+\subsubsection{Higgs Mechanism}
+\label{subsubsec:HiggsMech}
+
+Massive gauge bosons in the Lagrangian \ref{eqn:EWKLagrangian1} can be accommodated through the Brout-Englert-Higgs (BEH) mechanism, by introducing a complex scalar field $\phi$ in the spinor representation of $SU(2)_{L}$ doublet as \cite{HiggsMechanism},
+
+\begin{equation}
+\phi = \begin{pmatrix} \phi^{+} \\ \phi^{0} \end{pmatrix}
+\end{equation}
+
+A new term in the SM Lagrangian $\mathcal{L}_{BEH}$ depending on this scalar field can be defined as, 
+
+\begin{equation}
+\mathcal{L}_{BEH}  = (D_{\mu} \phi)^{\dagger} ( D^{\mu} \phi) - \mu^2 \phi^{\dagger} \phi + \lambda (\phi^{\dagger} \phi)^2
+\label{eqn:LagBEH}
+\end{equation}
+
+The first term $(D_{\mu} \phi)^{\dagger} ( D^{\mu} \phi)$ describes the kinematic of the new fields and the BEH potential $V(\phi)$ is given by the second term as, 
+
+\begin{equation}
+V(\phi) = \lambda (\phi^{\dagger} \phi)^2 - \mu^2 \phi^{\dagger} \phi
+\label{eqn:HiggsPot}
+\end{equation}
+
+The term $\lambda (\phi^{\dagger} \phi)^2$ describes the quartic self-interactions of the scalar fields and $\lambda > 0 $ is imposed by the vacuum stability. 
+
+For $\mu^2 > 0$, the scalar field develops a nonzero Vacuum Expectation Value (VEV) which spontaneously breaks the symmetry. Due to the symmetry of $V(\phi)$ an infinite number of degenerate states exists with the potential $v$ only depending on the combination of $\phi^{\dagger}\phi$ 
+\cite{PeskinQFT} with minimum energy satisfying $\phi^{\dagger}\phi = \frac{v^2}{2}$. This minimum energy requirement reduces one of the four degrees of freedom of the complex scalar field $\phi$. The three remaining degrees of freedom can be eliminated by a gauge transformation. We can choose $\phi$ by eliminating the upper component and the imaginary part of the lower component of the complex scalar field as,
+
+\begin{equation}
+<\phi> = \frac{1}{\sqrt{2}}\begin{pmatrix} 0 \\ v+H(x) \end{pmatrix},~ \hspace{10pt} ~;,~ H(x) = H^{*}(x) 
+ \frac{1}{\sqrt{2}} \begin{pmatrix} 0 \\ v \end{pmatrix}
+\label{eqn:ScalarExp}
+\end{equation}
+
+where the Higgs field ($H$) emerges as the excitation from the vacuum state. This choice of the minimum, spontaneously breaks the gauge symmetry \cite{DESYHiggsLecture}. 
+
+After substituting the $\phi$ in the Lagrangian in equation \ref{eqn:LagBEH}, the kinetic term takes the form
+
+\begin{equation}
+\begin{array}{l}
+\mathcal{L}_{BEH~Kinetic}  = \frac{\lambda}{2}v^{4} \\
+\hspace{25pt}  +\frac{1}{2} \partial_{\mu}H \partial^{\mu}H - \lambda v^{2}H^{2} + \frac{\lambda}{\sqrt{2}} v H^{3} + \frac{\lambda}{8} H^4  \\
+\hspace{25pt} + \frac{1}{4} ( v +\frac{1}{\sqrt{2} } H)^2 (W_{\mu}^{1} \hspace{10pt} W_{\mu}^2 \hspace{10pt} W_{\mu}^3 \hspace{10pt} B_{\mu} ) \begin{pmatrix} g^2 & 0 & 0 & 0 \\ 0 & g^2 & 0 & 0 \\  0  & 0 & g^2 & gg^{'} \\ 0  & 0 & gg^{'} & g^{2} \end{pmatrix} \begin{pmatrix} W^{1\mu}\\ W^{2\mu} \\ W^{3\mu} \\ B^{\mu} \end{pmatrix}
+\end{array}
+\label{eqn:LagBEHKin}
+\end{equation}
+
+where, the first line is the vacuum energy density and can be ignored in the case of QFT. The second line describes the triple and quartic self-interactions of the Higgs field as well as the mass term of the real scalar field H as $m_{H} = 2\lambda v^2$. The last line contains the mass term for the vector bosons. 
+
+From equations \ref{eqn:LagBEHKin} and \ref{eqn:RealWBosons} is evident the mass of the two charged vector bosons $W^{\pm}$ is $m_{W}=\frac{1}{2}g^2v^2$. Similarly, from equations \ref{eqn:LagBEHKin} and 
+\ref{eqn:NeutralGaugeBosons}, mass of the $Z$ boson is $m_{Z} = \frac{1}{2}(g^2+g^{'})v^2$ and mass of the photon is $m_{\gamma}=0$. 
+
+The initial $SU(2)_{L}$ Lagrangian in equation \ref{eqn:LagBEH} started with four gauge symmetries, which is reduced to a single $U(1)_{Q}$ gauge symmetry associated with the massless vector field in equation \ref{eqn:LagBEHKin}. This phenomenon in the Higgs mechanism is called the Electroweak Symmetry Breaking (EWSB) mechanism. As discussed above, the EWSB mechanism is at the heart of the SM by which the gauge boson gets the mass which also arises the longitudinal polarization of the massive vector bosons. This thesis summarizes a measurement that has an experimental sensitivity to a such important property of the theory.
+
+The last remaining piece in the SM is adding the fermion mass to the Lagrangian. A simple Lagrangian with the fermion mass can be written as, 
+
+\begin{equation}
+\mathcal{L}_{mass~fermion} = -m(\bar{\chi_{L}}\psi_{R} + \bar{\psi_{R}}\chi_{L})
+\label{eqn:FermMass}
+\end{equation}
+
+This term violates $SU(2)_{L}$ gauge symmetry because the left-handed fermions are doublets and the right-handed are singlets. Adding a scalar complex field $\phi =\frac{1}{\sqrt{2}} \begin{pmatrix} 0 \\ v+ H(x) \end{pmatrix}$ in the Lagrangian becomes, 
+
+\begin{equation}
+\mathcal{L}_{Yukawa,~\ell} = \frac{G_{\ell}v}{\sqrt{2}} (\bar{\chi_{L}}\psi_{R} + \bar{\psi}_{R}\chi_{L} ) - \frac{G_{\ell}}{\sqrt{2}} (\bar{\chi_{L}}\psi_{R} + \bar{\psi}_{R}\chi_{L} )H
+\label{eqn:YukawaLepMass}
+\end{equation}
+
+with arbitrary parameters $G_{\ell =e,\mu,\tau}$. The constant in the first term $\frac{G_{\ell}v}{\sqrt{2}}$ represents the mass of the fermions, whereas the second term gives the interaction of fermions with the Higgs field. 
+
+Similarly, the mass terms for quarks follow but including the down-type quarks, the parameters corresponding to $G_{\ell}$ are matrices $G^{ij}_{q}$ for the quark families $i,j$ and up-type and down-type quarks as:
+
+\begin{equation}
+\mathcal{L}_{Yukawa,~Q} = -G^{ij}_{d}(\bar{u}_{i} , \bar{d}_{i} )_{L} \phi d_{jR} - G^{ij}_{u}(\bar{u}_{i} , \bar{d}_{i} )_{L} \phi u_{jR} + h.c.
+\label{eqn:YukawaQuarkMass}
+\end{equation}
+
+The final Standard Model Lagrangian is the sum of the QED (equation \ref{eqn:QEDFullLag}), QCD (equation \ref{eqn:QCDInvLag}), Boson self-interactions (equation \ref{eqn:EWKLagrangian1}), Higgs potential and self-interactions ( equation \ref{eqn:LagBEH}), and the Higgs-fermion Yukawa coupling (equations \ref{eqn:YukawaLepMass} $\&$ \ref{eqn:YukawaQuarkMass}), which in a compact form is written in equation \ref{eqn:SMLagrangian}.
