--- a/sections/theory_StandardModelShortComings.tex
+++ b/sections/theory_StandardModelShortComings.tex
@@ -1,2 +1,19 @@
-\section{Outstanding Problems of the Standard Model}	
+\section{Limitations of the Standard Model}	
 \label{sec:SM_Incomplete}
+
+The predictions of the Standard Model have been experimentally validated by many discoveries since the $20^{th}$ century. The breakthrough discovery of the Higgs boson in 2012 at the LHC validated the last piece of the theory \cite{CMSHiggsDiscovery}$\&$ \cite{ATLASHiggsDiscovery}. Many predicted parameters such as production cross-sections and decay branching ratios for several processes have been measured with high precision. No statistically significant discrepancy from theory has been observed except for the $W^{\pm}$ boson mass measurement from the CDF $II$ Collaboration \cite{CDFWMass}.
+
+Despite the incredible success of the theory, experimental evidence suggests that the theory is incomplete. SM has the following limitations:
+
+\begin{itemize}
+
+\item{SM fails to explain the gravitational force.}
+
+\item{SM only describes $5\%$ of the universe. It fails to explain dark matter whose existence is experimentally supported by astrophysical observations such as galactic rotation curves and gravitational lensing \cite{DMGravitationalLensing}. It also doesn't explain dark energy. }
+
+\item{The CP violation allowed in SM cannot explain the amount of anti-matter asymmetry observed in the universe. }
+
+\item{ The strengths of the four fundamental forces are different by many orders of magnitude. It is not yet understood the hierarchy of such interactions.}
+\end{itemize}
+ 
+These limitations suggest that the SM is an effective field theory, only describing an approximation of our universe. Thus, motivating the experimental searches for new physics beyond the Standard Model (BSM).
