--- a/sections/theory_ColliderPheno.tex
+++ b/sections/theory_ColliderPheno.tex
@@ -21,7 +21,7 @@ where, $q_{1},~ q_{2}$ are the partons of the protons, and $d\sigma_{q_{1}q_{2}\
 
 \begin{figure}
 \centering
-    \includegraphics[width=0.7\textwidth] {figures/PDF.pdf}\hspace{1cm}
+    \includegraphics[width=0.7\textwidth] {figures/Theory/PDF.pdf}\hspace{1cm}
     \caption{ Parton distribution functions $xf_{q}(x,Q^2)$ for reference momentum transfer $Q^2_{0} = 10 ~ GeV^2$ (left) and $Q^2_{0} = 10^4~ GeV^{2}$ (right). The dependence of momentum fraction z carried by a parton is extracted in global PDF fits from experimental data \cite{PDFCalLHC}.}
 \label{fig:PDFFig}
 \end{figure}
@@ -39,7 +39,7 @@ The additional partons of the two protons that interact in the hard interaction 
 
 \begin{figure}
 \centering
-    \includegraphics[width=0.7\textwidth] {figures/ColliderPheno.pdf}\hspace{1cm}
+    \includegraphics[width=0.7\textwidth] {figures/Theory/ColliderPheno.pdf}\hspace{1cm}
     \caption{Phenomenology of di-Z boson production in association with two jets in proton-proton collider}
 \label{fig:ColliderPheno}
 \end{figure}
