--- a/sections/theory_StandardModel.tex
+++ b/sections/theory_StandardModel.tex
@@ -18,7 +18,7 @@ The SM also respects CPT symmetry, a combination of three additional discrete sy
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=0.7\textwidth] {figures/SMparticles.pdf}\hspace{1cm}
+    \includegraphics[width=0.7\textwidth] {figures/Theory/SMparticles.pdf}\hspace{1cm}
     \caption{ The seventeen fundamental particles of the SM include three generations of twelve fermions, four gauge bosons, and the scalar Higgs bosons. \cite{SMFigureWiki}}
     \label{fig:SM}
 \end{figure}
