--- a/thesis.tex
+++ b/thesis.tex
@@ -4,8 +4,7 @@
 \usepackage{titletoc}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{epigraph}
-\renewcommand{\epigraphflush}{center}
+\usepackage{epigraph}\renewcommand{\epigraphflush}{center}
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
@@ -54,14 +53,14 @@
 %Title of Thesis
 \title{The first measurement of the differential cross-sections for the electroweak production of ZZ in association with two jets in the four-leptons final state in 13 TeV proton-proton collision with the ATLAS detector.}
 \author{Prajita Bhattarai}
-\graduationmonth{February \textcolor{red}{I believe this is the official date for brandeis?}}
-\graduationyear{2022}
+\graduationmonth{May}
+\graduationyear{2023}
 \program{Department of Physics}
 \advisor{Professor Gabriella Sciolla}
 \signoff{Wendy Cadge}{Dean}
-\committee{Professor Gabriella Sciolla, Department of Physics\\
-Professor Aaram Apyan, Department of Physics\\
-\textcolor{red}{Someone}
+\committee{Professor Gabriella Sciolla, Department of Physics, Brandeis University \\
+Professor Aram Apyan, Department of Physics, Brandeis University\\
+Dr. Alessandro Tricoli, Brookhaven National Laboratory
 }
 
 \begin{document}
@@ -120,7 +119,8 @@ Professor Aaram Apyan, Department of Physics\\
 \include{sections/theory}
 	\include{sections/theory_StandardModel}
 	\include{sections/theory_StandardModelShortComings}
-	\include{sections/theory_MeasurementMotivation}
+	\include{sections/theory_ColliderPheno}
+	\include{sections/theory_EWkProcess}
 \clearpage
 
 \include{sections/LHC}
