--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,18 +1,22 @@
 \begin{itemize}
+\item{BSM: Beyond the Standard Model}
 \item {C: Charge conjugation}
 \item{P: Parity}
 \item{T: Time-reversal}
-\item{EWk: Electroweak}
+\item{EWK: Electroweak}
 \item{H: Weak Hypercharge}
 \item{ I: Weak Isospin}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LH:  Left Handed}
 \item{MC: Monte Carlo}
 \item{Q: Electric Charge}
+\item{QGC: Quartic Gauge Coupling}
 \item{QED: Quantum Electrodynamics}
 \item{QCD: Quantum Chromodynamics}
 \item{$(\mathcal{P})$: Poincare group}
 \item{RH: RightHanded}
 \item{SM: Standard Model}
+\item{TGC: Triple Gauge Coupling}
+\item{VBS: Vector Boson Scattering}
 \item{VEV: Vacuum Expectation Value}
 \end{itemize}
